--- a/PI/views/detallePost.ejs
+++ b/PI/views/detallePost.ejs
@@ -45,7 +45,9 @@
                           <input type="text" class="uk-input" placeholder="Agregar comentario"> 
                           <button class="uk-button uk-button-primary uk-margin-small-top" type="submit">Comentar</button>
                         </form>
-
+                        <form action="/post/edit/<%= resultados.id %>" method="GET">
+                        <button type="submit">Editar Post</button>
+                            </form>
                         <form action="/post/detalle/<%= resultados.id %>" method="POST">
                         <button type="submit">Borrar Post</button>
                             </form>
