--- a/PI/views/perfilEdit.ejs
+++ b/PI/views/perfilEdit.ejs
@@ -14,15 +14,14 @@
                     <label for="url_imagen" >Imágen:</label><br>
                     <input type="file" name="url_imagen" id=""><br>
                     <label for="texto">Nombre</label><br> 
-                        <input type="text" name="texto" value="<%= user.nombre %> "><br>
+                        <input type="text" name="texto" value="<%=  %> " ><br>
                         <label for="texto">Apellido</label><br> 
-                        <input type="text" name="texto" value="<%= user.apellido %> "><br>
+                        <input type="text" name="texto"><br>
                         <label for="texto">Nombre de usuario</label><br> 
-                        <input type="text" name="texto" value="<%= user.username %> "><br>
+                        <input type="text" name="texto"><br>
                         <label for="texto">Lema</label><br> 
-                        <input type="text" name="texto" value="<%= user.lema %> "><br>
-                        <label for="texto">Link</label><br> 
-                        <input type="url" name="texto"><br>
+                        <input type="text" name="texto"><br>
+                        
                 <button type="submit">Guardar</button>
                 </form>
 
