--- a/PI/views/perfilEdit.ejs
+++ b/PI/views/perfilEdit.ejs
@@ -15,7 +15,7 @@
                     <label for="url_imagen" >Imágen:</label><br>
                     <input type="file" name="url_imagen"><br>
                     <label for="texto">Nombre</label><br> 
-                        <input type="text" name="nombre" value="<%=user.nombre%>"><br>
+                        <input type="text" name="nombre"><br>
                         <label for="texto">Apellido</label><br> 
                         <input type="text" name="apellido"><br>
                         <label for="texto">Lema</label><br> 
